--- a/weather.html
+++ b/weather.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="weathercss.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
     </div>
     <p id="output"></p>
     <p id="min"></p>
-    <script src="script.js"></script>
+    <script src="scriptjs.js"></script>
     </div>
 </body>
 </html>
